--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,47 @@
 ---
+import Navbar from '../components/portfolio/Navbar.astro'
+
 
 ---
 
 
-test
+<body class="grid md:grid-cols-[13rem_1fr]">
+    <Navbar />
+    
+    
+    <!--   about me  -->
+    <section class="w-full flex flex-col items-center gap-6 ">
+        <!-- Avatar -->
+        <img id="avatar" class="block w-36 h-36 rounded-full object-cover"
+        src="https://dub.sh/TH11c0k"
+        alt="Avatar" />
+    
+        <!-- Title -->
+        <h1 class="text-xl">Über mich</h1>
+    
+        <!-- Card -->
+        <div class="card max-w-2xl grid md:grid-cols-2 gap-4 w-full">
+    
+            <div id="info-list" class="border-b-2 border-blue-700 pb-4 md:border-b-0 md:border-r-2">
+                <ul class="grid gap-x-5 gap-y-3 grid-cols-[min-content_1fr]">
+                    <!--
+                    {% for infoAboutMe in site.data.infoAboutMe.profile %}
+                        <p class="bg-blue-800 text-white w-fit h-fit px-1">{{infoAboutMe.infoName}}</p> <p class="break-all"> {{infoAboutMe.value}}</p>
+                    {% endfor %}
+                    -->
+                    <p class="bg-blue-800 text-white w-fit h-fit px-1">TODO TGIS</p> <p class="break-all"> TODO TGIS</p>
+                </ul>
+            </div>
+    
+            <div id="text-box">
+                <p>
+                    <!--{{site.data.infoAboutMe.aboutMeText}}-->
+                    TODO TGIS
+                </p>
+            </div>
+    
+        </div>
+    </section>
+    
+</body>
+
