cleaned up yaml and added markdown about my projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Navbar from '../components/portfolio/Navbar.astro'
 import SectionTitle from '../components/portfolio/SectionTitle.astro'
+import { getCollection, getEntry } from 'astro:content';
 
-
+const portfolioData = getCollection('portfolio');
 ---
-
 
 <body class="grid md:grid-cols-[13rem_1fr]">
     <Navbar />
