--- a/src/pages/lebenslauf.astro
+++ b/src/pages/lebenslauf.astro
@@ -14,7 +14,7 @@ const lebenslauf = await getEntry('lebenslauf', 'lebenslauf-infos');
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Lebenslauf</title>
 	</head>
 	<body class="bg-gray-500 min-h-screen flex justify-center font-serif">
 		<div id="lebenslauf" class="w-[21cm] h-[297mm] bg-white  min-h-screen p-[2cm] text-[12pt] relative">
