--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,113 +6,128 @@ import { getCollection, getEntry } from 'astro:content';
 const portfolioData = getCollection('portfolio');
 ---
 
-<body class="grid md:grid-cols-[13rem_1fr]">
-    <Navbar />
-    
-    
-    <!--   about me  -->
-    <!--  ================ -->
-    <section class="w-full flex flex-col items-center gap-6 bg-gray-600">
-        <!-- Avatar -->
-        <img id="avatar" class="block w-36 h-36 rounded-full object-cover"
-        src="https://dub.sh/TH11c0k"
-        alt="Avatar" />
-    
-        <!-- Title -->
-        <h1 class="text-xl">Über mich</h1>
-    
-        <!-- Card -->
-        <div class="card max-w-2xl grid md:grid-cols-2 gap-4 w-full bg-green-600">
-    
-            <div id="info-list" class="border-b-2 border-blue-700 pb-4 md:border-b-0 md:border-r-2">
-                <ul class="grid gap-x-5 gap-y-3 grid-cols-[min-content_1fr]">
-                    <!--
-                    {% for infoAboutMe in site.data.infoAboutMe.profile %}
-                        <p class="bg-blue-800 text-white w-fit h-fit px-1">{{infoAboutMe.infoName}}</p> <p class="break-all"> {{infoAboutMe.value}}</p>
-                    {% endfor %}
-                    -->
-                    <p class="bg-blue-800 text-white w-fit h-fit px-1">TODO TGIS</p> <p class="break-all"> TODO TGIS</p>
-                </ul>
-            </div>
-    
-            <div id="text-box">
-                <p>
-                    <!--{{site.data.infoAboutMe.aboutMeText}}-->
-                    TODO TGIS about me text, some very
-                    Bla bla bla bla bla
-                </p>
-            </div>
-        </div>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="generator" content={Astro.generator} />
+		<title>Portfolio</title>
+	</head>
 
 
-        <!--  Projekte  -->
+    <body class="grid md:grid-cols-[13rem_1fr]">
+        <Navbar />
+        
+        
+        <!--   about me  -->
         <!--  ================ -->
-        <section class="w-full flex flex-col items-center gap-6">
-            <SectionTitle title="Projekte" />
-
-            TODO TGIS PROJEKT
-
-            <!--
-            {% include sectionTitle.html title="Projekte" %}
+        <section class="w-full flex flex-col items-center gap-6 bg-gray-600">
+            <!-- Avatar -->
+            <img id="avatar" class="block w-36 h-36 rounded-full object-cover"
+            src="https://dub.sh/TH11c0k"
+            alt="Avatar" />
         
-            <div id="posts" class="flex flex-wrap justify-center w-4/5 gap-12">
+            <!-- Title -->
+            <h1 class="text-xl">Über mich</h1>
         
+            <!-- Card -->
+            <div class="card max-w-2xl grid md:grid-cols-2 gap-4 w-full bg-green-600">
         
-                {% for post in site.posts %}
-                    {% assign project_detail_id = post.title %}
-                    {% include projectCard.html project_detail_id=project_detail_id date=post.date title=post.title text=post.content image_url=post.card_image_url image_alt=post.card_image_alt tags=post.tags github_link=post.github_link demo_link=post.demo_link%}
-                    {% include project_detail.html id=project_detail_id title=post.title text=post.content %}
-                {% endfor %}
+                <div id="info-list" class="border-b-2 border-blue-700 pb-4 md:border-b-0 md:border-r-2">
+                    <ul class="grid gap-x-5 gap-y-3 grid-cols-[min-content_1fr]">
+                        <!--
+                        {% for infoAboutMe in site.data.infoAboutMe.profile %}
+                            <p class="bg-blue-800 text-white w-fit h-fit px-1">{{infoAboutMe.infoName}}</p> <p class="break-all"> {{infoAboutMe.value}}</p>
+                        {% endfor %}
+                        -->
+                        <p class="bg-blue-800 text-white w-fit h-fit px-1">TODO TGIS</p> <p class="break-all"> TODO TGIS</p>
+                    </ul>
+                </div>
         
-            </div>
-             -->
-        </section>
-
-
-        <!--  Ausbildung  -->
-        <!--  ================ -->
-        <section class="w-full flex flex-col items-center gap-6">
-            <SectionTitle title="Ausbildung" />
-
-            TODO TGIS Ausbildung
-            <!--{% include sectionTitle.html title="Ausbildung" %} -->
-            <!-- timeline -->
-            <!--
-            <div class="px-4 space-y-6">
-                <div
-                    class="space-y-12 relative px-4 before:absolute before:top-2 before:bottom-0 before:w-0.5 before:-left-3 before:bg-gray-700">
-            -->
-                    <!-- Cards -->
-                    <!--
-                    {%- for education in site.data.educations -%}
-                        {% include timelineCard.html time=education.time what_i_did=education.what_i_did text=education.text %}
-                    {%- endfor -%}
+                <div id="text-box">
+                    <p>
+                        <!--{{site.data.infoAboutMe.aboutMeText}}-->
+                        TODO TGIS about me text, some very
+                        Bla bla bla bla bla
+                    </p>
                 </div>
             </div>
-        -->
-        </section>
-
-
-        
-        <!--  Kontaktdaten  -->
-        <!--  ================ -->
-        <section class="w-full flex flex-col items-center gap-6">
-            <SectionTitle title="Kontaktdaten" />
-            TODO TGIS Kontaktdaten
-            <!--
-            {% include sectionTitle.html title="Kontaktdaten" %}
-        
-        
-            <ul class="flex gap-8 flex-wrap justify-center">
-                {% for contact in site.data.contacts %}
-                {% include contact.html card_link=contact.card_link image_url=contact.image_url alt_image_description=contact.alt_image_description
-                value=contact.value%}
-                {% endfor %}
-            </ul>
-            -->
-        </section>
-
-    </section>
     
-</body>
+    
+            <!--  Projekte  -->
+            <!--  ================ -->
+            <section class="w-full flex flex-col items-center gap-6">
+                <SectionTitle title="Projekte" />
+    
+                TODO TGIS PROJEKT
+    
+                <!--
+                {% include sectionTitle.html title="Projekte" %}
+            
+                <div id="posts" class="flex flex-wrap justify-center w-4/5 gap-12">
+            
+            
+                    {% for post in site.posts %}
+                        {% assign project_detail_id = post.title %}
+                        {% include projectCard.html project_detail_id=project_detail_id date=post.date title=post.title text=post.content image_url=post.card_image_url image_alt=post.card_image_alt tags=post.tags github_link=post.github_link demo_link=post.demo_link%}
+                        {% include project_detail.html id=project_detail_id title=post.title text=post.content %}
+                    {% endfor %}
+            
+                </div>
+                 -->
+            </section>
+    
+    
+            <!--  Ausbildung  -->
+            <!--  ================ -->
+            <section class="w-full flex flex-col items-center gap-6">
+                <SectionTitle title="Ausbildung" />
+    
+                TODO TGIS Ausbildung
+                <!--{% include sectionTitle.html title="Ausbildung" %} -->
+                <!-- timeline -->
+                <!--
+                <div class="px-4 space-y-6">
+                    <div
+                        class="space-y-12 relative px-4 before:absolute before:top-2 before:bottom-0 before:w-0.5 before:-left-3 before:bg-gray-700">
+                -->
+                        <!-- Cards -->
+                        <!--
+                        {%- for education in site.data.educations -%}
+                            {% include timelineCard.html time=education.time what_i_did=education.what_i_did text=education.text %}
+                        {%- endfor -%}
+                    </div>
+                </div>
+            -->
+            </section>
+    
+    
+            
+            <!--  Kontaktdaten  -->
+            <!--  ================ -->
+            <section class="w-full flex flex-col items-center gap-6">
+                <SectionTitle title="Kontaktdaten" />
+                TODO TGIS Kontaktdaten
+                <!--
+                {% include sectionTitle.html title="Kontaktdaten" %}
+            
+            
+                <ul class="flex gap-8 flex-wrap justify-center">
+                    {% for contact in site.data.contacts %}
+                    {% include contact.html card_link=contact.card_link image_url=contact.image_url alt_image_description=contact.alt_image_description
+                    value=contact.value%}
+                    {% endfor %}
+                </ul>
+                -->
+            </section>
+    
+        </section>
+        
+    </body>
+
+</html>
+
+
+
 
