added schema for projekte

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Navbar from '../components/portfolio/Navbar.astro'
 import SectionTitle from '../components/portfolio/SectionTitle.astro'
 import { getCollection, getEntry } from 'astro:content';
 
-const portfolioData = getCollection('portfolio');
+const portfolioData = getCollection('projekte');
 ---
 
 <html lang="en">
