added about me text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,9 +49,7 @@ const projectData = await getCollection('projects');
         
                 <div id="text-box">
                     <p>
-                        <!--{{site.data.infoAboutMe.aboutMeText}}-->
-                        TODO TGIS about me text, some very
-                        Bla bla bla bla bla
+                        {portfolioData.data.infoAboutMe.aboutMeText}
                     </p>
                 </div>
             </div>
