--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const projectData = await getCollection('projects');
         
         <!--  Main Content  -->
         <!--  ================ -->
-        <section class="w-full flex flex-col items-center gap-6 bg-">
+        <section class="w-full flex flex-col items-center gap-6 bg-gray-100">
 
              <!--   about me  -->
              <!--  ================ -->
@@ -39,7 +39,7 @@ const projectData = await getCollection('projects');
             <h1 class="text-xl">Über mich</h1>
         
             <!-- Card -->
-            <div class="card max-w-2xl grid md:grid-cols-2 gap-4 w-full bg-green-600">
+            <div class="px-8 py-5 bg-white rounded-lg shadow-md max-w-2xl grid md:grid-cols-2 gap-4 w-full ">
         
                 <div id="info-list" class="border-b-2 border-blue-700 pb-4 md:border-b-0 md:border-r-2">
                     <ul class="grid gap-x-5 gap-y-3 grid-cols-[min-content_1fr]">
