--- a/src/components/portfolio/ProjectPost.astro
+++ b/src/components/portfolio/ProjectPost.astro
@@ -18,10 +18,9 @@ const { project } = Astro.props;
         <p>Erstellt am: <span class="font-medium">{project.data.creation_date.toISOString().slice(0,10)}</span></p>
         <!-- tags -->
         <ul id="tags" class="pt-2 pb-2 flex gap-2">
-            <!-- {%- for tag in include.tags -%}
-            {% include tags.html tagName=tag%}
-            {%- endfor -%} -->
-        </ul>
+            { project.data.tags.split(' ').map((tag) => (
+                <li class="px-3 py-1 text-xs font-semibold text-white bg-blue-800 rounded-2xl">{tag}</li>
+            ))}
 
         <!-- Content text -->
         <div class="">
