--- a/src/components/portfolio/ProjectPost.astro
+++ b/src/components/portfolio/ProjectPost.astro
@@ -10,23 +10,24 @@ const { project } = Astro.props;
 
 <section class="w-80 darkTODOTGIS:bg-neutral-900 bg-white rounded-2xl shadow-md flex flex-col">
 
-
     <!-- Image -->
     <img class="aspect-video w-80 rounded-t-2xl object-contain object-top" src={project.data.card_image_url} alt={project.data.card_image_alt}>
 
     <div class="p-6 pt-0 flex-grow">
         <p>Erstellt am: <span class="font-medium">{project.data.creation_date.toISOString().slice(0,10)}</span></p>
+        
         <!-- tags -->
         <ul id="tags" class="pt-2 pb-2 flex gap-2">
             { project.data.tags.split(' ').map((tag) => (
                 <li class="px-3 py-1 text-xs font-semibold text-white bg-blue-800 rounded-2xl">{tag}</li>
             ))}
+        </ul>
 
         <!-- Content text -->
         <div class="">
-            <!-- <h1 class="text-2xl font-medium pb-2">{{include.title}}</h1> -->
+            <h1 class="text-2xl font-medium pb-2">{project.data.title}</h1>
             <!-- remove all html formatting, only show first 156 symbols  -->
-            <!-- <p class="text leading-6">{{ include.text | strip_html | truncate: 156 }} -->
+            <p class="text leading-6">{ project.body.replace(/<[^>]*>?/gm, '').slice(0, 156) }...</p>
         </div>
     </div>
 
