--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Navbar from '../components/portfolio/Navbar.astro'
 import SectionTitle from '../components/portfolio/SectionTitle.astro'
 import ProjectPost from '../components/portfolio/ProjectPost.astro'
@@ -87,8 +88,21 @@ const projectData = await getCollection('projects');
             <!--  ================ -->
             <section class="w-full flex flex-col items-center gap-6">
                 <SectionTitle title="Ausbildung" />
+
+                <div class="px-4 space-y-6">
+                    <div class="space-y-12 relative px-4 before:absolute before:top-2 before:bottom-0 before:w-0.5 before:-left-3 before:bg-gray-700">
+                        {portfolioData.data.education.map(edu => (
+                            <div class=" max-w-sm card flex flex-col relative before:absolute before:top-2 before:w-4 before:h-4 before:rounded-full before:left-[-35px] before:bg-blue-800">
+                                <h1 class="text-xl font-semibold tracking-wide">{edu.what_i_did}</h3>
+                                <time class="text-xs tracking-wide">{edu.time}</time>
+                                    <p class="mt-3">
+                                        {edu.text}
+                                    </p>
+                            </div>
+                        ))}
+                    </div>
+                </div>
     
-                TODO TGIS Ausbildung
                 <!--{% include sectionTitle.html title="Ausbildung" %} -->
                 <!-- timeline -->
                 <!--
